<resources>
    <string name="app_name">ثاء</string>
    <string name="call_us">996509029339</string>
    <string name="email_us">thaa.app1@gmail.com</string>
    <string name="twitt_us">thaa_app</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="free_questionare">استشارة مجانية</string>
    <string name="user_name">الاسم</string>
    <string name="id_text">رقم الهوية</string>
    <string name="email_text">البريد الالكتروني</string>
    <string name="mobile_text">رقم الجوال</string>
    <string name="city_name">المدينة</string>
    <string name="pass_word">كلمة المرور</string>
    <string name="age_text">العمر</string>
    <string name="closers">صلة القرابة</string>
    <string name="age_study">المرحلة الدراسة</string>
    <string name="title_activity_maps">Map</string>
</resources>
