<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_login_fragment"
    android:fitsSystemWindows="true"

    android:layoutDirection="rtl">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_login_fragment"

    android:layoutDirection="rtl">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        app:cardElevation="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/user_name"
            android:layout_marginTop="@dimen/activity_vertical_margin"

            android:background="@color/white_color"
            android:textColorHint="@color/dark_text_color"
            android:fontFamily="@font/cairo_regular"
            android:textSize="@dimen/edit_text_size"
            android:padding="4dp"


            />
        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/dark_text_color"
            android:layout_marginTop="@dimen/secondary_vertical_space"
            />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />
            <TextView
                android:id="@+id/text_city"
                android:text="المدينة"
                android:textSize="@dimen/edit_text_size"
                android:fontFamily="@font/cairo_regular"
                android:textColor="@color/dark_text_color"
                android:padding="4dp"



                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/city_id"


                android:padding="4dp"



                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />

            <TextView
                android:id="@+id/text_village"
                android:text="الحي"
                android:textSize="@dimen/edit_text_size"
                android:fontFamily="@font/cairo_regular"
                android:textColor="@color/dark_text_color"

                android:padding="4dp"


                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/village_id"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:padding="4dp"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_word"
                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="تأكيد كلمة المرور  "
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"

                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />







        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.rey.material.widget.Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:text="تسجيل الدخول"
        android:textColor="@color/white_color"
        android:textSize="@dimen/edit_text_size"
        android:fontFamily="@font/droidkufi_regular"
        android:background="@drawable/ripple_login_button"


        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/large_vertical"

        />

</LinearLayout>

</androidx.core.widget.NestedScrollView>