<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/back_ground_login_fragment"
    android:layoutDirection="rtl"


    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/back_ground_login_fragment"
    android:layoutDirection="rtl"


    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/re_toolbar"
        android:theme="@style/ToolbarTheme"
        >


        <TextView
            android:id="@+id/text_barhome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:textSize="18sp"

            app:fontFamily="@font/cairobold" />


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/c_value"
        android:text="بيانات مقدم الطلب"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_regular"
        android:textColor="@color/black_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        app:cardElevation="8dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"


                android:hint="@string/user_name"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="right"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/closers_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/closers"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="right"


                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agestudy_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_study"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="right"


                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/school_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="اسم المدرسة"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="right"


                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"

                android:background="@color/white_color"
                android:gravity="right"

                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"


                />
            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:background="@color/dark_text_color"
                android:layout_marginTop="@dimen/secondary_vertical_space"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_text"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="right"
                android:background="@color/white_color"
                android:textColorHint="@color/dark_text_color"
                android:fontFamily="@font/cairo_regular"
                android:textSize="@dimen/edit_text_size"
                android:padding="4dp"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/c_value2"
        android:text=" العلاج"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cairo_regular"
        android:textColor="@color/black_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"

        android:layout_marginLeft="8dp"
        android:background="@color/back_ground_login_fragment"

        app:cardElevation="8dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white_color"



            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:background="@color/white_color"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:text="اليوم"
                        android:textColor="@color/black_color"
                        android:textSize="18sp"
                        android:fontFamily="@font/droidkufi_regular"
                        android:layout_marginRight="8dp"

                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="من"
                        android:textColor="@color/black_color"
                        android:textSize="18sp"
                        android:fontFamily="@font/droidkufi_regular"
                        android:layout_marginRight="8dp"

                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="الى"
                        android:textColor="@color/black_color"
                        android:textSize="18sp"
                        android:fontFamily="@font/droidkufi_regular"
                        android:layout_marginRight="8dp"
                        android:layout_height="wrap_content" />





                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reycycle_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    >
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
            <com.rey.material.widget.Button
                android:id="@+id/add_course"
                android:layout_width="90dp"
                android:text="اضافة  علاج"
                android:textColor="@color/black_color"
                android:textSize="10sp"
                android:fontFamily="@font/droidkufi_regular"
                android:background="@drawable/ripple_login_button"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/teacher_name"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.rey.material.widget.Button
        android:id="@+id/confirm_button"
        android:layout_width="120dp"
        android:text=" تأكيد "
        android:textColor="@color/white_color"
        android:textSize="10sp"
        android:fontFamily="@font/droidkufi_regular"
        android:background="@drawable/ripple_login_button"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        />

</LinearLayout>

</androidx.core.widget.NestedScrollView>